k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myedu-service
  namespace: default
spec:
  selector:
    app: myedu
#  sessionAffinity: ClientIP
#  sessionAffinityConfig:
#    clientIP:
#      timeoutSeconds: 10800  
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
