k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/affinity-mode: "persistent"
spec:
  ingressClassName: nginx
  rules:
  - host: edu.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myedu-service
            port:
              number: 8000
